--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 diffusers==0.21.2
-gradio==3.44.4
+gradio==3.47.1
+spaces==0.15.0
 torch==2.0.0
 torchvision==0.15.1
-transformers==4.33.2
+transformers==4.34.0
 trimesh==3.23.5
