--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,25 +19,30 @@ repos:
       - id: docformatter
         args: ["--in-place"]
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
         args: ["--profile", "black"]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.6.0
+    rev: v1.8.0
     hooks:
       - id: mypy
         args: ["--ignore-missing-imports"]
         additional_dependencies:
-          ["types-python-slugify", "types-requests", "types-PyYAML"]
+          [
+            "types-python-slugify",
+            "types-requests",
+            "types-PyYAML",
+            "types-pytz",
+          ]
   - repo: https://github.com/psf/black
-    rev: 23.9.1
+    rev: 24.2.0
     hooks:
       - id: black
         language_version: python3.10
         args: ["--line-length", "119"]
   - repo: https://github.com/kynan/nbstripout
-    rev: 0.6.1
+    rev: 0.7.1
     hooks:
       - id: nbstripout
         args:
@@ -46,7 +51,7 @@ repos:
             "metadata.interpreter metadata.kernelspec cell.metadata.pycharm",
           ]
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.7.0
+    rev: 1.7.1
     hooks:
       - id: nbqa-black
       - id: nbqa-pyupgrade
