--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
+    "editor.formatOnSave": true,
+    "files.insertFinalNewline": false,
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
         "editor.formatOnType": true,
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true
+            "source.organizeImports": "explicit"
         }
+    },
+    "[jupyter]": {
+        "files.insertFinalNewline": false
     },
     "black-formatter.args": [
         "--line-length=119"
@@ -13,9 +18,13 @@
     "flake8.args": [
         "--max-line-length=119"
     ],
-    "ruff.args": [
+    "ruff.lint.args": [
         "--line-length=119"
     ],
-    "editor.formatOnSave": true,
-    "files.insertFinalNewline": true
+    "notebook.output.scrolling": true,
+    "notebook.formatOnCellExecution": true,
+    "notebook.formatOnSave.enabled": true,
+        "notebook.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        }
 }
